--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,6 +10,14 @@ MONGODB_URI_TEST=mongodb://localhost:27017/dooit_test
 JWT_SECRET=your_super_secret_jwt_key_here
 JWT_EXPIRE=7d
 
+# Session Configuration
+SESSION_SECRET=your_session_secret_here
+
+# Google OAuth Configuration
+GOOGLE_CLIENT_ID=your_google_client_id_here
+GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+GOOGLE_CALLBACK_URL=http://localhost:5000/api/auth/google/callback
+
 # Email Configuration (for notifications)
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
