--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.6",
+    "axios": "^1.6.2",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.509.0",
     "react": "^18.2.0",
