--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"lucide-react": "^0.509.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-hot-toast": "^2.4.1",
 		"react-router-dom": "^6.28.0",
 		"tailwindcss": "^4.1.6"
 	},
